--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/react": "^1.2.12",
+    "@langchain/community": "^0.3.49",
+    "@langchain/core": "^0.3.66",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
